@@ -1,3 +1,9 @@
+2012-11-02  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* sysdeps/x86_64/tls.h: Don't include <xmmintrin.h>.
+	(__128bits): New struct typedef.
+	(tcbhead_t): Replace __m128 with __128bits.
+
 2012-10-30  Aurelien Jarno  <aurelien@aurel32.net>
 	    Joseph Myers  <joseph@codesourcery.com>
 
